# RayGame

./: .bazelccrc  .bazelrc  .clang-format  .clang-tidy  .clangd  .cmake-format.py  .cmake-format.yaml  .cppcheck-suppress  .gitignore  .gitmodules  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  build.sh  compile_commands.json  config.sh  continuous_build.sh  test.cpp  test.h
core/: BUILD  CMakeLists.txt  colours.h  config.h  embed.h  exception.cpp  exception.h  file.h  logger.cpp  logger.h  math.h  pixel.cpp  pixel.h  texture.h  types.cpp  types.h  window.h
core/base/: BUILD  CMakeLists.txt  concepts.h  concepts_test.cpp  condition.cpp  condition.h  condition_test.cpp  config.h  debug.h  debug_test.cpp  exception.cpp  exception.h  logger.cpp  logger.h  logger_test.cpp  types.cpp  types.h
core/drawing/: BUILD  CMakeLists.txt  colour.h  pixel.h
core/math/: BUILD  CMakeLists.txt  math.h  math_test.cpp  mathrule_test.cpp  numeric_cast.cpp  numeric_cast.h  numeric_cast_test.cpp  random.cpp  random.h  random_test.cpp  rect.cpp  rect.h  rect_test.cpp  vector.cpp  vector.h  vector_test.cpp
core/math/arithmetic/: BUILD  safe_add.cpp  safe_add_test.cpp  safe_div.cpp  safe_div.h  safe_div_test.cpp  safe_mult.cpp  safe_mult.h  safe_mult_test.cpp  safe_sub.cpp  safe_sub_test.cpp
core/window/: BUILD  CMakeLists.txt  wayland.cpp  window.cpp
core/window/detail/: BUILD
core/windowimpl/: BUILD  wayland.cpp  wayland.h
core/windowimpl/wayland/: pixelbuffer.h  region.cpp  surface.h  util.cpp  util.h  wayland_fwd.h  window.cpp  window.h  window_impl.cpp
docs/: CMakeLists.txt  code_of_ethics.md  coding_standard.md  index.md
raygame/: BUILD  CMakeLists.txt
raygame/core/: BUILD  CMakeLists.txt  application.cpp  application.h  assert.cpp  assert.h  concepts.cpp  concepts.h  concepts_test.cpp  condition.cpp  condition.h  condition_test.cpp  config.cpp  config.h  debug.cpp  debug.h  debug_test.cpp  exception.cpp  exception.h  logger.cpp  logger.h  macros.cpp  macros.h  matrix.cpp  matrix.h  matrix_test.cpp  string.cpp  string.h  types.cpp  types.h
raygame/core/application/: BUILD  application.cpp  application.h  input.cpp  input.h
raygame/core/base/: BUILD  concepts.cpp  concepts_test.cpp  condition_test.cpp  debug.cpp  debug.h  debug_test.cpp  exception.cpp  exception.h  logger.cpp  logger.h  logger_test.cpp
raygame/core/config/: architecture.h  assert.h  build_type.h  compiler.h  conditional.h  endian.h  feature_check.h  operating_system.h  simd.h  stringify.h  user_defines.h  window_backend.h
raygame/core/drawing/: BUILD  CMakeLists.txt  colour.cpp  colour.h  image.cpp  image.h  image_test.cpp  pixel.cpp  pixel.h  pixel_test.cpp
raygame/core/io/: BUILD  CMakeLists.txt  file.cpp  file.h
raygame/core/math/: BUILD  CMakeLists.txt  arithmetic.cpp  arithmetic.h  math.cpp  math.h  math_test.cpp  mathrule.cpp  mathrule.h  mathrule_test.cpp  numeric_cast.cpp  numeric_cast.h  numeric_cast_test.cpp  random.cpp  random.h  random_test.cpp  rect.cpp  rect.h  rect_test.cpp  ring_average.cpp  ring_average.h  ring_average_test.cpp  timer.cpp  timer.h  vector.cpp  vector.h  vector_test.cpp
raygame/core/network/: server.cpp  server.h
raygame/core/serialisation/: BUILD  CMakeLists.txt  serialisation.cpp  serialisation.h
raygame/core/test/: BUILD  tests_begin.h
raygame/core/window/: BUILD  CMakeLists.txt  input.cpp  input.h  wayland.cpp  wayland.h  (+4 more)
raygame/systems/: BUILD  CMakeLists.txt
raygame/tools/: CMakeLists.txt  resmk.cpp
raygame/world/: CMakeLists.txt
rules/toolchains/: BUILD  BUILD.bazel  cc_toolchain_config.bzl  clang.BUILD  flags.bzl  helpers.bzl  toolchains.bzl
src/: CMakeLists.txt  Makefile  config.cpp  config.h  main.cpp  main.h
src/cmake/: CompilerArgs.cmake  CompilerWarnings.cmake  FindBattery.cmake  FindWayland.cmake  Linker.cmake  RgDoxygen.cmake  RgPreventInSourceBuilds.cmake  RgProjectArgs.cmake  RgTest.cmake  RgWayland.cmake  StaticAnalysis.cmake  Utilities.cmake  backend.cmake  compiler_args.cmake  docs.cmake  embed.cmake
src/core/: CMakeLists.txt  actor.cpp  actor.h  animatedsprite.cpp  animatedsprite.h  animatedspritesheet.cpp  animatedspritesheet.h  backend.cpp  backend.h  colours.cpp  colours.h  condition.cpp  condition.h  conditions.cpp  conditions.h  config.cpp  config.h  debug.cpp  debug.h  embed.cpp  exception.cpp  exception.h  file.cpp  file.h  image.cpp  image.h  logger.cpp  logger.h  math.cpp  math.h  rect.cpp  rect.h  socket.h  spritesheet.cpp  spritesheet.h  texture.cpp  texture.h  types.cpp  types.h  vector.cpp  (+3 more)
src/game/: CMakeLists.txt  main.cpp
src/gui/: colour.cpp  colour.h  input.h  raylib_include.h  rectangle.h  texture.cpp  texture.h  vector.h  window.cpp  window.h
src/lib/: animatedsprite.cpp  animatedsprite.h  spritesheet.cpp  spritesheet.h
src/objects/: actor.cpp  actor.h  evilwizard.cpp  evilwizard.h  male_char.cpp  male_char.h  shroom.cpp  shroom.h  topdown_char.cpp  topdown_char.h
src/raylib/: audiodevice.cpp  audiodevice.h  audiostream.cpp  audiostream.h  automationeventlist.cpp  automationeventlist.h  boundingbox.cpp  boundingbox.h  camera2d.cpp  camera2d.h  camera3d.cpp  camera3d.h  color.cpp  color.h  filedata.cpp  filedata.h  filetext.cpp  filetext.h  font.cpp  font.h  functions.cpp  functions.h  gamepad.cpp  gamepad.h  image.cpp  image.h  input.cpp  input.h  keyboard.cpp  keyboard.h  material.cpp  material.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  meshunmanaged.cpp  meshunmanaged.h  model.cpp  model.h  (+46 more)
src/test/: CMakeLists.txt  fuzztest.cpp  math.cpp  test.cpp  test.h  tests_begin.h
src/utils/: colours.h  input.h  logger.cpp  logger.h  patterns.h  types.h
src/world/: male_char.cpp  male_char.h  shroom.cpp  shroom.h  topdown_char.cpp  topdown_char.h
tests/: CMakeLists.txt  resmk.cpp
tests/core/: BUILD  CMakeLists.txt  assert.cpp  concepts.cpp  condition.cpp  debug.cpp  logger.cpp  matrix.cpp  types.cpp
tests/raytest/: BUILD  main.cpp  raytest.cpp  raytest.h  tests_begin.h
tests/tools/: BUILD  CMakeLists.txt  resmk.cpp
(+475 files in other folders)
