module(
	name = "raygame",
	version = "0.0.0",
	compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "doctest", version = "2.4.11")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "imgui", version = "1.91.8")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

bazel_dep(name = "rules_doxygen", version = "2.0.0", dev_dependency = True)
doxygen_extension = use_extension(
    "@rules_doxygen//:extensions.bzl",
    "doxygen_extension",
)
use_repo(doxygen_extension, "doxygen")

bazel_dep(name = "toolchains_llvm", version = "1.3.0")
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
	llvm_version = "19.1.3",
	cxx_standard = {"": "c++2c"},
    stdlib = {"": "builtin-libc++"},
    compile_flags = {"": [
        # Security
        "-fstack-protector",
        "-fno-omit-frame-pointer",
    ]},
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")
