module(
	name = "raygame",
	version = "0.0.0",
	compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "stb", version = "0.0.0-20251026-f1c79c0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
)

bazel_dep(name = "rules_doxygen", version = "2.5.0", dev_dependency = True)
doxygen_extension = use_extension(
    "@rules_doxygen//:extensions.bzl",
    "doxygen_extension",
)
use_repo(doxygen_extension, "doxygen")

bazel_dep(name = "toolchains_llvm", version = "1.5.0")
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
	llvm_versions = {
        "": "21.1.0",
    },
	cxx_standard = {"": "c++26"},
    stdlib = {"": "builtin-libc++"},
    compile_flags = {"": [
        "-fstack-protector",
        "-fno-omit-frame-pointer",
        "-fcolor-diagnostics",
        "-Wall",
        "-Wextra",
        "-Weverything",
        "-pedantic",
        "-Wthread-safety",
        "-Wself-assign",
        "-Wno-padded",
        "-Wno-c99-extensions",
        "-Wno-c99-compat",
        "-Wno-c++-compat",
        "-Wno-c++98-compat",
        "-Wno-c++98-compat-pedantic",
        "-Wno-c++20-compat",
        "-Wno-pre-c++20-compat-pedantic",
        "-Wno-pre-c++17-compat-pedantic",
        "-Wno-switch-default",
        "-Wno-c++20-extensions",
        "-Wno-unused-macros",
        "-Wno-unsafe-buffer-usage",
        "-Wno-c23-extensions",
        "-Wno-unused-command-line-argument",
    ]},
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "zpp_bits")
archive_override(
    module_name = "zpp_bits",
    url = "https://github.com/eyalz800/zpp_bits/archive/refs/tags/v4.5.1.tar.gz",
    sha256 = "2589469c86700264e4746b3efb0319b6911f2b9899fbd7cefddb6a01a7001f3b",
    strip_prefix = "zpp_bits-4.5.1",
    build_file = "@//third_party/zpp_bits:zpp_bits.BUILD",
    patch_cmds = [
        "echo 'module(name=\"zpp_bits\")' > MODULE.bazel",
    ],
)
