module(
    name = "raygame",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "stb", version = "0.0.0-20251026-f1c79c0")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")

bazel_dep(name = "rules_doxygen", version = "2.6.3", dev_dependency = True)
doxygen_extension = use_extension(
    "@rules_doxygen//:extensions.bzl",
    "doxygen_extension",
)
use_repo(doxygen_extension, "doxygen")

bazel_dep(name = "toolchains_llvm", version = "1.7.0")
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_versions = {
        "": "21.1.8",
    },
    cxx_standard = {"": "c++26"},
    stdlib = {"": "builtin-libc++"},
    compile_flags = {"": [
        "-fstack-protector",
        "-fno-omit-frame-pointer",
        "-fcolor-diagnostics",
        "-Wall",
        "-Wextra",
        "-Weverything",
        "-pedantic",
        "-Wthread-safety",
        "-Wself-assign",
        "-Wno-padded",
        "-Wno-c99-extensions",
        "-Wno-c99-compat",
        "-Wno-c++-compat",
        "-Wno-c++98-compat",
        "-Wno-c++98-compat-pedantic",
        "-Wno-c++20-compat",
        "-Wno-pre-c++20-compat-pedantic",
        "-Wno-pre-c++17-compat-pedantic",
        "-Wno-switch-default",
        "-Wno-c++20-extensions",
        "-Wno-unused-macros",
        "-Wno-unsafe-buffer-usage",
        "-Wno-c23-extensions",
        "-Wno-unused-command-line-argument",
    ]},
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")
